--- a/css/shop.css
+++ b/css/shop.css
@@ -1,18 +1,85 @@
 body {
-    margin: 20px 30px 20px 30px;
-    min-height: 100vh;
     background-color: grey;
 }
-body, .dev {
+.container{
+    width: 1000px;
+    margin: auto;
+    transition: 0.5s;
+}
+header{
+    display: grid;
+    grid-template-columns: 1fr 50px;
+    margin-top: 50px;
+}
+header .shopping{
+    position: relative;
+    text-align: right;
+}
+header .shopping img{
+    width: 40px;
+
+}
+header .shopping span{
+    background-color: darkolivegreen;
+    border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-    align-self: center;
+    color: white;
+    position: absolute;
+    top: -5px;
+    left: 80%;
+    padding: 3px 10px;
 }
-img {
-    height: 50%;
-    width: 50%;
+.list{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    column-gap: 20px;
+    row-gap: 20px;
+    margin-top: 50px;
 }
-.ss{
-    background-color: darkolivegreen;;
+.card{
+    position: fixed;
+    top:0;
+    left: 100%;
+    width: 500px;
+    background-color: darkolivegreen;
+    height: 100vh;
+    transition: 0.5s;
+}
+.card h1 {
+    color: honeydew;
+    font-weight: 100;
+    margin: 0;
+    padding: 0 20px;
+    height: 80px;
+    display: flex;
+    align-items: center;
+}
+.card .checkout{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+.card .checkout div{
+    background-color: aliceblue;
+    width: 100%;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    cursor: pointer;
+}
+.card .checkout div:nth-child(2){
+    background-color: grey;
+    color: aliceblue;
+}
+.active .card{
+    left: calc(100% - 500px);
+}
+.active .container{
+    transform: translateX(-200px);
 }
