--- a/css/blur-card.css
+++ b/css/blur-card.css
@@ -16,7 +16,7 @@
 
 :root {
     --background-dark: #2d3548;
-    --text-light: rgba(255, 255, 255, 0.6);
+    --text-light: rgba(255, 255, 255, 0.98);
     --text-lighter: rgba(255, 255, 255, 0.9);
     --spacing-s: 8px;
     --spacing-m: 16px;
@@ -35,7 +35,7 @@
     padding: var(--spacing-xxl) var(--spacing-l);
 }
 
-.cardgl-grid {
+.blurcard-grid {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     grid-column-gap: var(--spacing-l);
@@ -45,30 +45,30 @@
 }
 
 @media (min-width: 540px) {
-    .cardgl-grid {
+    .blurcard-grid {
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
 @media (min-width: 960px) {
-    .cardgl-grid {
+    .blurcard-grid {
         grid-template-columns: repeat(4, 1fr);
     }
 }
 
-.cardgl {
+.blurcard {
     list-style: none;
     position: relative;
 }
 
-.cardgl:before {
+.blurcard:before {
     content: '';
     display: block;
     padding-bottom: 150%;
     width: 100%;
 }
 
-.cardgl__background {
+.blurcard__background {
     background-size: cover;
     background-position: center;
     border-radius: var(--spacing-l);
@@ -79,33 +79,34 @@
     right: 0;
     top: 0;
     transform-origin: center;
-    trsnsform: scale(1) translateZ(0);
+    transform: scale(1) translateZ(0);
     transition: filter 200ms linear, transform 200ms linear;
 }
 
-.cardgl:hover .cardgl__background {
+.blurcard:hover .blurcard__background {
     transform: scale(1.05) translateZ(0);
 }
 
-.cardgl-grid:hover > .cardgl:not(:hover) .cardgl__background {
+.blurcard-grid:hover > .blurcard:not(:hover) .blurcard__background {
     filter: brightness(0.5) saturate(0) contrast(1.2) blur(20px);
 }
 
-.cardgl__content {
+.blurcard__content {
     left: 0;
     padding: var(--spacing-l);
     position: absolute;
     top: 0;
 }
 
-.cardgl__category {
-    color: var(--text-light);
-    font-size: 0.9rem;
+.blurcard__category {
+    color: var(--text-lighter);
+    font-size: 1rem;
+    font-weight: 700;
     margin-bottom: var(--spacing-s);
     text-transform: uppercase;
 }
 
-.cardgl__heading {
+.blurcard__heading {
     color: var(--text-lighter);
     font-size: 1.9rem;
     text-shadow: 2px 2px 20px rgba(0, 0, 0, 0.2);
