--- a/css/blur-card.css
+++ b/css/blur-card.css
@@ -1,46 +1,18 @@
-/* CSS Variables
- * The :root pseudo-class selector is used to define CSS variables that can be used throughout the rest of the CSS document.
- * These variables are globally available and provide a consistent way to manage values such as colors and spacing.
- *
- * --background-dark: A dark color used for backgrounds. Value: #2d3548
- * --text-light: A light color used for text. Value: rgba(255, 255, 255, 0.6)
- * --text-lighter: A lighter color used for text. Value: rgba(255, 255, 255, 0.9)
- * --spacing-s: Small spacing. Value: 8px
- * --spacing-m: Medium spacing. Value: 16px
- * --spacing-l: Large spacing. Value: 24px
- * --spacing-xl: Extra large spacing. Value: 32px
- * --spacing-xxl: Extra extra large spacing. Value: 64px
- * --width-container: The maximum width of the container. Value: 1200px
- */
-
-
-:root {
-    --background-dark: #2d3548;
-    --text-light: rgba(255, 255, 255, 0.98);
-    --text-lighter: rgba(255, 255, 255, 0.9);
-    --spacing-s: 8px;
-    --spacing-m: 16px;
-    --spacing-l: 24px;
-    --spacing-xl: 32px;
-    --spacing-xxl: 64px;
-    --width-container: 1200px;
-}
 
 .hero-section {
     align-items: flex-start;
-    /*background-image: linear-gradient(15deg, #0f4667 0%, #2a6973 150%);*/
     display: flex;
     min-height: 100%;
     justify-content: center;
-    padding: var(--spacing-xxl) var(--spacing-l);
+    padding: 64px 24px;
 }
 
 .blurcard-grid {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-column-gap: var(--spacing-l);
-    grid-row-gap: var(--spacing-l);
-    max-width: var(--width-container);
+    grid-column-gap: 24px;
+    grid-row-gap: 24px;
+    max-width: 1200px;
     width: 100%;
 }
 
@@ -71,7 +43,7 @@
 .blurcard__background {
     background-size: cover;
     background-position: center;
-    border-radius: var(--spacing-l);
+    border-radius: 24px;
     bottom: 0;
     filter: brightness(0.75) saturate(1.2) contrast(0.85);
     left: 0;
@@ -93,21 +65,21 @@
 
 .blurcard__content {
     left: 0;
-    padding: var(--spacing-l);
+    padding: 24px;
     position: absolute;
     top: 0;
 }
 
 .blurcard__category {
-    color: var(--text-lighter);
+    color: rgba(255, 255, 255, 0.9);
     font-size: 1rem;
     font-weight: 700;
-    margin-bottom: var(--spacing-s);
+    margin-bottom: 8px;
     text-transform: uppercase;
 }
 
 .blurcard__heading {
-    color: var(--text-lighter);
+    color: rgba(255, 255, 255, 0.9);
     font-size: 1.9rem;
     text-shadow: 2px 2px 20px rgba(0, 0, 0, 0.2);
     line-height: 1.4;
