--- a/css/tmp.css
+++ b/css/tmp.css
@@ -1,19 +1,25 @@
 /*Basics structer */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
-:root{
-    --background-color: #678d68;
-    --background-colorB: black ;
-    --text-color1: #f1f1f1;
+:root {
+    --background-colorG: #1c3b2b;
+    --background-colorB: black;
+    --text-colorW: #f1f1f1;
 
     --button-color: #f1f1f1;
     --button-color-hover: #f1f1f1;
-    --button-background-color: #678d68;
-    --button-text-color-green: #5dae87;
-    --button-text-color-white: #ff5c5c;
-    --button-text-color-black: #1c1c1c;
+    --button-text-color-green: #5fa284;
+    --button-text-color-white: #fcf7f7;
+    --button-text-color-black: #000000;
 
+    --background-liner-gradientBG: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 40%, rgba(28, 59, 43, 1) 100%);
+    --background-liner-gradientGB: linear-gradient(180deg, rgba(28, 59, 43, 1) 100%, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 40%);
+
+    --border-radiusUlt: 999px;
+    --border-radiusHigh: 24px;
+    --border-radiusLow: 7px;
 }
+
 
 
 * {
@@ -38,6 +44,7 @@ header nav {
     display: flex;
     gap: 30px;
 }
+
 header nav a {
     text-decoration: none;
     font-size: 20px;
@@ -45,14 +52,18 @@ header nav a {
     padding: 8px 16px;
     border-radius: 99px;
     transition: 0.3s;
-    color: white;
+    color: var(--button-text-color-white);
 }
+
 header nav a.active {
-    background: #5247B9;
+    background: var(--button-text-color-white);
+    color: var(--button-text-color-green); /*inactive color*/
 }
+
 header nav a:hover {
-    background: #5247B9;
+    background: #9dffd3;
 }
+
 header nav:hover > a:not(:hover) {
     background: none;
 }
@@ -60,7 +71,7 @@ header nav:hover > a:not(:hover) {
 .home {
     display: flex;
     height: 100dvh;
-    background: linear-gradient(to top, #D2E2FB 30%, #86A8DB);
+    background: linear-gradient(to top, #000000 30%, #5dae87);
     position: relative;
     overflow: hidden;
 }
@@ -77,7 +88,7 @@ header nav:hover > a:not(:hover) {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
+    color: var(--text-colorW);
     font-size: 80px;
     text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
 }
@@ -85,12 +96,13 @@ header nav:hover > a:not(:hover) {
 .about {
     padding: 50px;
     /*background: #000000;*/
-    color: white;
+    color: var(--text-colorW);
     position: relative;
     z-index: 100;
-    background: rgb(0,0,0);
-    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 40%, rgba(28,59,43,1) 100%);
+    background: var(--background-colorB);
+    background: var(--background-liner-gradientBG);
 }
+
 .about h1 {
     font-size: 40px;
 }
@@ -100,6 +112,7 @@ header nav:hover > a:not(:hover) {
         height: 80px; /* Adjust header height for smaller screens */
     }
 }
+
 
 html, html a {
     -webkit-font-smoothing: antialiased;
@@ -149,15 +162,13 @@ h6 {
 }
 
 
-
-
 p {
     line-height: 1.4;
     margin: 20px 0;
 }
 
 p.subtitle {
-    font-family: 'Arimo', sans-serif;
+    font-family: 'Poppins', sans-serif;
     text-transform: uppercase;
     font-weight: 700;
     letter-spacing: 0.03em;
@@ -166,7 +177,7 @@ p.subtitle {
 }
 
 .subtitle {
-    font-family: 'Arimo', sans-serif;
+    font-family: 'Poppins Light', sans-serif;
     text-transform: uppercase;
     font-weight: 700;
     letter-spacing: 0.03em;
@@ -211,8 +222,9 @@ a:hover {
     border-radius: 24px;
 }
 
-input[type=text] {
-    border: 2px solid #444;
+input[type=text],
+input[type=email] {
+    border: 2px solid #f5f4f4;
     background: #fff;
     font-size: 17px;
     color: #444;
@@ -224,17 +236,20 @@ input[type=text] {
     text-transform: uppercase;
 }
 
+/*BUTTON SECTION */
+
 .buttons {
     width: auto;
     margin: 0 auto;
     text-align: center;
 }
 
+
 a.button-1, a.button-2, button {
     color: #212121;
-    background: #c7c7c7;
+    background: var(--button-color);
     border: 2px solid #ffffff;
-    border-radius: 999px;
+    border-radius: var(--border-radiusHigh);
     margin-top: -2px;
     margin-left: 10px;
     font-family: 'Arimo', sans-serif;
@@ -247,13 +262,13 @@ a.button-1, a.button-2, button {
     margin: 10px;
     text-align: center;
     padding: 18px 0;
-    transition: all 0.3s ease; /* Smooth transition effect */
+    transition: all 0.3s ease;
 }
 
 a.button-1:hover {
     border-color: #fafafa;
     background: #eaeaea;
-    box-shadow: 0 0 10px #fafafa, 0 0 20px #fafafa, 0 0 30px #1c3b2b; /* Glow  */
+    box-shadow: 0 0 10px #fafafa, 0 0 20px #fafafa, 0 0 30px #1c3b2b;
 }
 
 a.button-2 {
@@ -274,6 +289,7 @@ a.button-2:hover {
         margin: 5px;
     }
 }
+
 /*Header*/
 
 header#top {
@@ -286,7 +302,7 @@ header#top {
 
 header#top .wrapper {
     display: flex;
-    justify-content: center; /* Center the navigation */
+    justify-content: center;
     align-items: center;
     width: 100%;
 }
@@ -314,9 +330,9 @@ header#top nav {
 }
 
 header#top nav ul#navigation {
-    display: flex; /* Use Flexbox for the navigation items */
-    gap: 20px; /* Adjust gap as needed */
-    justify-content: center; /* Center the items within the navigation */
+    display: flex;
+    gap: 20px;
+    justify-content: center;
 }
 
 header#top nav ul#navigation li {
@@ -399,7 +415,7 @@ header#top nav ul li a.nav-cta {
     height: 840px;
     position: relative;
     padding: 1px 0 0 0;
-    overflow: hidden; /* Ensure the pseudo-element is clipped to the banner's bounds */
+    overflow: hidden;
 }
 
 #banner::before {
@@ -411,7 +427,7 @@ header#top nav ul li a.nav-cta {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: -1; /* Ensure the pseudo-element is behind the content */
+    z-index: -1;
     animation: kenburns 20s infinite;
 }
 
@@ -428,7 +444,7 @@ header#top nav ul li a.nav-cta {
     margin: 220px auto 0;
     padding: 0 5%;
     opacity: 0.9;
-    color: #333;
+    color: var(--text-colorW);
     font-size: 108px;
     text-align: center;
     text-transform: uppercase;
@@ -473,28 +489,6 @@ header#top nav ul li a.nav-cta {
     }
 }
 
-/*Video Section*/
-
-.video-section {
-    text-align: center;
-    padding: 100px 0;
-    background: #fff;
-}
-
-.video-section p.subtitle {
-    color: #5dae87;
-    font-size: 17px;
-}
-
-.video-section video {
-    margin-top: 80px;
-}
-
-.video-section .button-1, .video-section .button-2 {
-    display: block;
-    margin: 60px auto 0 auto;
-}
-
 /*Card Section*/
 
 .card-section {
@@ -525,9 +519,21 @@ ul.card-list li {
     border-radius: 24px;
 }
 
-ul.card-list li:hover {
-    box-shadow: 0px 0px 40px rgba(0, 0, 0, .1);
+.card-section ul.card-list li a:hover {
+    /*background-color: rgba(0, 0, 0, 0); !* Dark background *!*/
+    color: var(--button-text-color-green);
+    text-shadow: 0 0 10px #5dae87, 0 0 20px #5dae87, 0 0 30px #5dae87;
+    transition: background-color 0.8s ease, text-shadow 0.8s ease;
 }
+
+
+
+
+.card-section ul.card-list li:hover {
+    box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.5);
+    transition: box-shadow 0.3s ease;
+}
+
 
 ul.card-list li .image-container {
     width: 100px;
@@ -582,14 +588,14 @@ ul.card-list li:last-of-type {
 .text-section {
     text-align: left;
     padding: 100px 0;
-    background: #1c3b2b;
+    background: var(--background-colorG);
 
 
 }
 
 .text-section p.subtitle {
     text-align: left;
-    color: #5dae87;
+    color: var(--button-text-color-green);
     font-size: 17px;
     margin-bottom: 40px;
 }
@@ -598,17 +604,35 @@ ul.card-list li:last-of-type {
     text-align: center;
 }
 
+
+
 .text-section .image.align-left {
     float: left;
     width: 50%;
     padding: 0 20px;
 }
 
+.image.align-left img {
+    border-radius: 24px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: box-shadow 0.3s ease;
+}
+
+.image.align-left img:hover {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
+}
+
+
 .text-section .text.align-left {
     float: left;
     width: 50%;
     padding: 0 10% 0 40px;
 }
+
+.text-section  p i {
+    color: var(--text-colorW);
+}
+
 
 .text-section .image.align-right {
     float: right;
@@ -846,224 +870,71 @@ ul.team-list li:last-of-type {
     }
 }
 
-/*Portfolio Section*/
-
-.portfolio-section {
-    text-align: center;
-    padding: 100px 0;
-    background: #fff;
-}
-
-.portfolio-section p.subtitle {
-    color: #5dae87;
-    font-size: 17px;
-}
-
-ul.portfolio-list {
-    width: 90%;
-    max-width: 1190px;
-    margin: 80px auto 60px;
-}
-
-ul.portfolio-list li {
-    display: inline-block;
-    float: left;
-    width: 30.3%;
-    background: #fff;
-    padding: 0;
-    margin: 1.5%;
-}
-
-ul.portfolio-list li a:hover {
-    opacity: .5;
-}
-
-@media only screen and (max-width: 960px) {
-    ul.portfolio-list li {
-        display: block;
-        width: 47%;
-        margin: 1.5%;
-    }
-}
-
-@media only screen and (max-width: 720px) {
-    ul.portfolio-list li {
-        display: block;
-        width: 100%;
-        margin: 3% 0;
-    }
-}
-
 /*Email List Section*/
 
-.email-list-section {
+.form-section {
     background: #1c3b2b;
+    background: linear-gradient(180deg, rgba(28, 59, 43, 1) 100%, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 50%);
     padding: 100px 0;
     color: #fff;
 }
 
-.email-list-section h3 {
+.form-section h3 {
     color: #fff;
     text-align: center;
 }
 
-.email-list-section p.subtitle {
+.form-section p.subtitle {
     color: #bfeed7;
     font-size: 17px;
 }
 
-.email-list-section form {
+.form-section form {
     width: auto;
     text-align: center;
     margin: 40px auto 0 auto;
 }
 
-.email-list-section input[type=text] {
+.form-section input[type=text],
+.form-section input[type=email] {
     background: #5dae87;
     color: #fff;
-    color: rgba(255, 255, 255, 0.75);
+    color: rgb(248, 248, 248);
     border: 2px solid #eee;
     margin: 10px 5px;
 }
 
-.email-list-section input[type=text]:focus {
+input[type=email]::placeholder {
+    color: var(--text-colorW);
+}
+
+.form-section input[type=text]:focus,
+.form-section input[type=email]:focus{
     outline: none;
     color: #fff;
 }
 
-.email-list-section button {
+.form-section button {
     background: #fff;
     color: #5dae87;
     margin: 10px 5px;
 }
 
 
-/*Pricing Section*/
-
-.pricing-section {
-    text-align: center;
-    padding: 100px 0;
-    background: #f9f9f9;
+.form-section button[type="submit"] {
+    background-color: var(--button-color);
+    color: var(--button-text-color-green);
+    border-radius: var(--border-radiusHigh);
+    border: 1px solid #ffffff;
+    font-size: 18px;
 }
 
-.pricing-section p.subtitle {
-    color: #5dae87;
-    font-size: 17px;
+.form-section button[type="submit"]:hover {
+    background-color: var(--button-color-hover);
+    box-shadow: 0 0 10px 2px rgba(255, 255, 255, 0.5);
+    transition: background-color 0.8s ease, box-shadow 0.8s ease;
 }
 
-ul.pricing-table {
-    width: 90%;
-    margin: 100px auto 60px;
-}
-
-ul.pricing-table li {
-    display: inline-block;
-    float: left;
-    width: 30.66%;
-    background: #fff;
-    padding: 60px 0;
-    margin: 0 2%;
-}
-
-ul.pricing-table li:hover {
-    box-shadow: 0px 0px 40px rgba(0, 0, 0, .1);
-}
-
-.price-container {
-    font-family: 'Arimo', sans-serif;
-    text-transform: uppercase;
-    font-weight: 700;
-    position: relative;
-    width: 200px;
-    margin: 0 auto;
-}
-
-.price-container .currency-symbol {
-    font-size: 21px;
-    position: absolute;
-    top: 15px;
-    left: 40px;
-}
-
-.price-container .price {
-    font-size: 86px;
-}
-
-.price-container .terms {
-    font-size: 21px;
-}
-
-ul.pricing-table li p {
-    width: 80%;
-    margin: 20px auto 40px auto;
-}
-
-ul.pricing-table li a {
-    font-family: 'Arimo', sans-serif;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: #5dae87;
-}
-
-ul.pricing-table li a:hover {
-    color: #42966e;
-}
-
-ul.pricing-table li:first-of-type {
-    margin-left: 0;
-}
-
-ul.pricing-table li:last-of-type {
-    margin-right: 0;
-}
-
-ul.pricing-table ul.features {
-    margin: 30px 0 30px 0;
-}
-
-ul.pricing-table .button-1 {
-    color: #fff;
-    border-color: #5dae87;
-}
-
-ul.pricing-table .button-2 {
-    color: #777;
-    border-color: #777;
-}
-
-ul.pricing-table .button-1:hover {
-    color: #fff;
-    background-color: #42966e;
-    border-color: #42966e;
-}
-
-ul.pricing-table .button-2:hover {
-    background-color: #777;
-    color: #fff;
-}
-
-ul.pricing-table ul.features li {
-    display: block;
-    width: 100%;
-    margin: 0px 0;
-    padding: 10px;
-    font-family: 'Arimo', sans-serif;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: #bbb;
-}
-
-ul.pricing-table ul.features li:hover {
-    box-shadow: none;
-}
-
-@media only screen and (max-width: 960px) {
-    ul.pricing-table li {
-        display: block;
-        width: 100%;
-        margin: 20px 0 !important;
-    }
-}
 
 
 /*additionally added widghts to the css file*/
@@ -1072,7 +943,8 @@ ul.pricing-table ul.features li:hover {
 /*Footer*/
 
 footer {
-    background: #000000;
+    background: var(--background-colorG);
+    background: var(--background-liner-gradientGB);
     margin-top: 0px;
     color: #fff;
     text-align: center;
@@ -1084,7 +956,7 @@ footer a.logo {
     float: left;
     color: #fff;
     text-indent: -4999px;
-    background: url(../assets/logo3.png) no-repeat;
+    background: url(../assets/logo2.png) no-repeat;
     margin: 0 0 0 40px;
     padding: 0 0 40px 0;
     width: 56px;
@@ -1140,13 +1012,15 @@ footer .footer-right a.social {
     text-indent: -4999px;
     overflow: hidden;
     text-align: left;
-    background-color: #363636;
+    background-color: var(--button-text-color-black);
     border-radius: 999px;
     margin-left: 10px;
+    transition: background-color 0.3s ease;
 }
 
+
 footer .footer-right a.social:hover {
-    background-color: #5dae87;
+    background-color: var(--button-text-color-green);
 }
 
 footer a.social.facebook {
