--- a/css/shop.css
+++ b/css/shop.css
@@ -1,5 +1,5 @@
 body {
-  background-color: grey;
+ background-color: green;
 }
 a {
   text-decoration: none;
@@ -22,7 +22,7 @@ header .shopping img {
   width: 40px;
 }
 header .shopping span {
-  background-color: darkolivegreen;
+
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -43,7 +43,7 @@ header .shopping span {
 
 .list .item {
   text-align: center;
-  background-color: darkolivegreen;
+  background-color: #6a6fc9;
   padding: 20px;
   box-shadow: 0 50px 50px honeydew;
   letter-spacing: 1px;
@@ -143,4 +143,67 @@ header .shopping span {
 }
 .listCard .count {
   margin: 0 10px;
+}
+.checkoutLayout {
+  align-self: center;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 50px;
+  padding: 20px;
+  width: 100%;
+}
+.checkoutLayout .right{
+  background-color: #5358B3;
+  border-radius: 20px;
+  padding: 40px;
+  color: honeydew;
+  box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.65);
+  width: 700px;
+  height: 280px;
+}
+.checkoutLayout .right form{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  border-bottom: 1px solid lightblue;
+  padding-bottom: 20px;
+}
+.checkoutLayout .right .form .group:nth-child(-n+3){
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+.checkoutLayout .form input, .checkoutLayout .form select{
+  width: 100%;
+  padding: 10px 20px;
+  box-sizing: border-box;
+  border-radius: 20px;
+  margin-top: 10px;
+  border: none;
+  background-color: #6a6fc9;
+}
+.checkoutLayout row{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 10px;
+}
+.checkoutLayout .row{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 10px;
+}
+.checkoutLayout .row div:nth-child(2){
+  font-weight: bold;
+  font-size: x-large;
+}
+.buttonCheckout{
+  width: 100%;
+  height: 40px;
+  border: none;
+  border-radius: 20px;
+  margin-top: 20px;
+  font-weight: bold;
+  color: white;
+  background-color: #222e44;
 }
