--- a/css/feedback.css
+++ b/css/feedback.css
@@ -1,23 +1,41 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-.body_feedback {
-    text-align: center;
-    background-color: #0086fc;
-    font-family: "Poppins", sans-serif;
-    color: #000000;
+body{
+    background-image: url("assets/parallax/sky.png");
+    background-color: #222e44;
 }
+
+/*.body_feedback {*/
+/*    text-align: center;*/
+/*    background-color: #000000;*/
+/*    background-image: url("assets/parallax/sky.png");*/
+/*    !*font-family: "Poppins", sans-serif;*!*/
+/*    !*color: #000000;*!*/
+/*}*/
+
+
+
+
+body {
+    background-image: url("assets/parallax/sky.png");
+    background-color: #222e44; /* Fallback color in case the image doesn't load */
+    background-size: cover; /* Cover the entire body */
+    background-repeat: no-repeat; /* Prevent the image from repeating */
+}
+
 
 .title_feedback {
     color: #fff;
 }
 
-.form-container_feedback {
+.feedback {
     margin: 0 auto;
     max-width: 600px;
     padding: 20px;
     background-color: #fff; /* White background for form */
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Box shadow */
+    align-items: center;
 }
 
 .input-field_feedback {
