--- a/css/unused/style-backup.css
+++ b/css/unused/style-backup.css
@@ -1,120 +1,9 @@
 /*Basics structer */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
-
-:root {
-    --background-colorG: #1c3b2b;
-    --background-colorB: black;
-    --text-colorW: #f1f1f1;
-
-    --button-color: #f1f1f1;
-    --button-color-hover: #f1f1f1;
-    --button-text-color-green: #5fa284;
-    --button-text-color-white: #fcf7f7;
-    --button-text-color-black: #000000;
-
-    --background-liner-gradientBG: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 40%, rgba(28, 59, 43, 1) 100%);
-    --background-liner-gradientGB: linear-gradient(180deg, rgba(28, 59, 43, 1) 100%, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 40%);
-
-    --border-radiusUlt: 999px;
-    --border-radiusHigh: 24px;
-    --border-radiusLow: 7px;
-}
-
-
 
 * {
-    margin: 0;
-    padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
-
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100px;
-    padding: 0 5%;
-    position: fixed;
-    width: 100%;
-    z-index: 100;
-
-}
-
-header nav {
-    display: flex;
-    gap: 30px;
-}
-
-header nav a {
-    text-decoration: none;
-    font-size: 20px;
-    font-weight: 600;
-    padding: 8px 16px;
-    border-radius: 99px;
-    transition: 0.3s;
-    color: var(--button-text-color-white);
-}
-
-header nav a.active {
-    background: var(--button-text-color-white);
-    color: var(--button-text-color-green);
-}
-
-header nav a:hover {
-    background: #9dffd3;
-}
-
-header nav:hover > a:not(:hover) {
-    background: none;
-}
-
-
-
-
-.home {
-    display: flex;
-    height: 100dvh;
-    background: linear-gradient(to top, #000000 30%, #5dae87);
-    position: relative;
-    overflow: hidden;
-}
-
-.home img {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    pointer-events: none;
-}
-
-.home .title {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: var(--text-colorW);
-    font-size: 80px;
-    text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
-}
-
-.about {
-    padding: 50px;
-    /*background: #000000;*/
-    color: var(--text-colorW);
-    position: relative;
-    z-index: 100;
-    background: var(--background-colorB);
-    background: var(--background-liner-gradientBG);
-}
-
-.about h1 {
-    font-size: 40px;
-}
-
-@media (max-width: 768px) {
-    header {
-        height: 80px; /* Adjust header height for smaller screens */
-    }
 }
 
 
@@ -140,7 +29,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Montserrat', sans-serif;
     text-transform: uppercase;
     font-weight: 700;
-    color: #ffffff;
+    color: #444;
     margin: 0;
     padding: 0;
 }
@@ -165,14 +54,13 @@ h6 {
     font-size: 18px;
 }
 
-
 p {
     line-height: 1.4;
     margin: 20px 0;
 }
 
 p.subtitle {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Arimo', sans-serif;
     text-transform: uppercase;
     font-weight: 700;
     letter-spacing: 0.03em;
@@ -181,7 +69,7 @@ p.subtitle {
 }
 
 .subtitle {
-    font-family: 'Poppins Light', sans-serif;
+    font-family: 'Arimo', sans-serif;
     text-transform: uppercase;
     font-weight: 700;
     letter-spacing: 0.03em;
@@ -223,12 +111,10 @@ a:hover {
     max-width: 1190px;
     margin: 0 auto;
     position: relative;
-    border-radius: 24px;
 }
 
-input[type=text],
-input[type=email] {
-    border: 2px solid #f5f4f4;
+input[type=text] {
+    border: 2px solid #444;
     background: #fff;
     font-size: 17px;
     color: #444;
@@ -240,20 +126,17 @@ input[type=email] {
     text-transform: uppercase;
 }
 
-/*BUTTON SECTION */
-
 .buttons {
     width: auto;
     margin: 0 auto;
     text-align: center;
 }
 
-
 a.button-1, a.button-2, button {
-    color: #212121;
-    background: var(--button-color);
-    border: 2px solid #ffffff;
-    border-radius: var(--border-radiusHigh);
+    color: #fff;
+    background: #5dae87;
+    border: 2px solid #5dae87;
+    border-radius: 999px;
     margin-top: -2px;
     margin-left: 10px;
     font-family: 'Arimo', sans-serif;
@@ -266,13 +149,13 @@ a.button-1, a.button-2, button {
     margin: 10px;
     text-align: center;
     padding: 18px 0;
-    transition: all 0.3s ease;
+    transition: all 0.3s ease; /* Smooth transition effect */
 }
 
 a.button-1:hover {
-    border-color: #fafafa;
-    background: #eaeaea;
-    box-shadow: 0 0 10px #fafafa, 0 0 20px #fafafa, 0 0 30px #1c3b2b;
+    border-color: #42966e;
+    background: #42966e;
+    box-shadow: 0 0 10px #42966e, 0 0 20px #42966e, 0 0 30px #42966e; /* Glow  */
 }
 
 a.button-2 {
@@ -297,64 +180,33 @@ a.button-2:hover {
 /*Header*/
 
 header#top {
-    background: transparent;
+    background: #fff;
     height: 160px;
-    border-radius: 24px;
-    position: absolute;
-    z-index: 999;
-}
-
-header#top .wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
 }
 
 h1.logo a {
+    display: inline-block;
+    float: left;
     color: #444;
     line-height: 2.25;
     text-indent: -4999px;
-    background-image: url(../assets/icon/logo2.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    padding-left: 200px;
-    display: inline-block;
+    background: url(../../assets/icon/logo2.png) no-repeat;
     margin: 40px 0 0 40px;
     width: 56px;
     height: 74px;
 }
 
 header#top nav {
-    display: flex;
+    display: inline-block;
+    float: right;
     width: auto;
     margin-top: 60px;
     margin-right: 40px;
-    justify-content: center;
-}
-
-header#top nav ul#navigation {
-    display: flex;
-    gap: 20px;
-    justify-content: center;
-}
-
-header#top nav ul#navigation li {
-    display: inline-block;
-}
-
-header#top nav ul#navigation li a {
-    display: inline-block;
-    background: none;
-    padding: 10px 15px;
-    color: #777;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 0.03em;
 }
 
 header#top nav ul li {
     display: inline-block;
+    float: left;
 }
 
 header#top nav ul li a {
@@ -379,6 +231,7 @@ header#top nav ul li a.nav-cta {
     margin-left: 10px;
 }
 
+
 @media only screen and (max-width: 1024px) {
     header#top {
         height: auto;
@@ -390,17 +243,20 @@ header#top nav ul li a.nav-cta {
     }
 
     header#top nav {
+        float: none;
         text-align: center;
         width: 100%;
         margin: 20px auto 0 auto;
     }
 
     header#top nav ul li {
+        float: none;
         font-size: 15px;
     }
 
     h1.logo a {
         display: block;
+        float: none;
         margin: 0 auto;
         text-align: center;
     }
@@ -419,19 +275,19 @@ header#top nav ul li a.nav-cta {
     height: 840px;
     position: relative;
     padding: 1px 0 0 0;
-    overflow: hidden;
+    overflow: hidden; /* Ensure the pseudo-element is clipped to the banner's bounds */
 }
 
 #banner::before {
     content: '';
-    background: url(../assets/header-image.jpg) no-repeat center;
+    background: url(../../assets/header-image.jpg) no-repeat center;
     background-size: cover;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: -1;
+    z-index: -1; /* Ensure the pseudo-element is behind the content */
     animation: kenburns 20s infinite;
 }
 
@@ -448,7 +304,7 @@ header#top nav ul li a.nav-cta {
     margin: 220px auto 0;
     padding: 0 5%;
     opacity: 0.9;
-    color: var(--text-colorW);
+    color: #333;
     font-size: 108px;
     text-align: center;
     text-transform: uppercase;
@@ -493,13 +349,34 @@ header#top nav ul li a.nav-cta {
     }
 }
 
+/*Video Section*/
+
+.video-section {
+    text-align: center;
+    padding: 100px 0;
+    background: #fff;
+}
+
+.video-section p.subtitle {
+    color: #5dae87;
+    font-size: 17px;
+}
+
+.video-section video {
+    margin-top: 80px;
+}
+
+.video-section .button-1, .video-section .button-2 {
+    display: block;
+    margin: 60px auto 0 auto;
+}
+
 /*Card Section*/
 
 .card-section {
     text-align: center;
     padding: 100px 0;
-    background: #1c3b2b;
-
+    background: #f9f9f9;
 }
 
 .card-section p.subtitle {
@@ -510,7 +387,6 @@ header#top nav ul li a.nav-cta {
 ul.card-list {
     width: 90%;
     margin: 100px auto 60px;
-
 }
 
 ul.card-list li {
@@ -520,31 +396,18 @@ ul.card-list li {
     background: #fff;
     padding: 60px 0;
     margin: 0 2%;
-    border-radius: 24px;
 }
 
-.card-section ul.card-list li a:hover {
-    /*background-color: rgba(0, 0, 0, 0); !* Dark background *!*/
-    color: var(--button-text-color-green);
-    text-shadow: 0 0 10px #5dae87, 0 0 20px #5dae87, 0 0 30px #5dae87;
-    transition: background-color 0.8s ease, text-shadow 0.8s ease;
+ul.card-list li:hover {
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, .1);
 }
-
-
-
-
-.card-section ul.card-list li:hover {
-    box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.5);
-    transition: box-shadow 0.3s ease;
-}
-
 
 ul.card-list li .image-container {
     width: 100px;
     height: 100px;
     margin: 0 auto 40px auto;
     background: #f9f9f9;
-    border-radius: 24px;
+    border-radius: 999px;
     position: relative;
 }
 
@@ -592,14 +455,12 @@ ul.card-list li:last-of-type {
 .text-section {
     text-align: left;
     padding: 100px 0;
-    background: var(--background-colorG);
-
-
+    background: #fff;
 }
 
 .text-section p.subtitle {
     text-align: left;
-    color: var(--button-text-color-green);
+    color: #5dae87;
     font-size: 17px;
     margin-bottom: 40px;
 }
@@ -608,35 +469,17 @@ ul.card-list li:last-of-type {
     text-align: center;
 }
 
-
-
 .text-section .image.align-left {
     float: left;
     width: 50%;
     padding: 0 20px;
 }
 
-.image.align-left img {
-    border-radius: 24px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transition: box-shadow 0.3s ease;
-}
-
-.image.align-left img:hover {
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
-}
-
-
 .text-section .text.align-left {
     float: left;
     width: 50%;
     padding: 0 10% 0 40px;
 }
-
-.text-section  p i {
-    color: var(--text-colorW);
-}
-
 
 .text-section .image.align-right {
     float: right;
@@ -874,11 +717,58 @@ ul.team-list li:last-of-type {
     }
 }
 
+/*Portfolio Section*/
+
+.portfolio-section {
+    text-align: center;
+    padding: 100px 0;
+    background: #fff;
+}
+
+.portfolio-section p.subtitle {
+    color: #5dae87;
+    font-size: 17px;
+}
+
+ul.portfolio-list {
+    width: 90%;
+    max-width: 1190px;
+    margin: 80px auto 60px;
+}
+
+ul.portfolio-list li {
+    display: inline-block;
+    float: left;
+    width: 30.3%;
+    background: #fff;
+    padding: 0;
+    margin: 1.5%;
+}
+
+ul.portfolio-list li a:hover {
+    opacity: .5;
+}
+
+@media only screen and (max-width: 960px) {
+    ul.portfolio-list li {
+        display: block;
+        width: 47%;
+        margin: 1.5%;
+    }
+}
+
+@media only screen and (max-width: 720px) {
+    ul.portfolio-list li {
+        display: block;
+        width: 100%;
+        margin: 3% 0;
+    }
+}
+
 /*Email List Section*/
 
 .form-section {
-    background: #1c3b2b;
-    background: linear-gradient(180deg, rgba(28, 59, 43, 1) 100%, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 50%);
+    background: #5dae87;
     padding: 100px 0;
     color: #fff;
 }
@@ -899,21 +789,15 @@ ul.team-list li:last-of-type {
     margin: 40px auto 0 auto;
 }
 
-.form-section input[type=text],
-.form-section input[type=email] {
+.form-section input[type=text] {
     background: #5dae87;
     color: #fff;
-    color: rgb(248, 248, 248);
+    color: rgba(255, 255, 255, 0.75);
     border: 2px solid #eee;
     margin: 10px 5px;
 }
 
-input[type=email]::placeholder {
-    color: var(--text-colorW);
-}
-
-.form-section input[type=text]:focus,
-.form-section input[type=email]:focus{
+.form-section input[type=text]:focus {
     outline: none;
     color: #fff;
 }
@@ -925,20 +809,132 @@ input[type=email]::placeholder {
 }
 
 
-.form-section button[type="submit"] {
-    background-color: var(--button-color);
-    color: var(--button-text-color-green);
-    border-radius: var(--border-radiusHigh);
-    border: 1px solid #ffffff;
-    font-size: 18px;
+/*Pricing Section*/
+
+.pricing-section {
+    text-align: center;
+    padding: 100px 0;
+    background: #f9f9f9;
 }
 
-.form-section button[type="submit"]:hover {
-    background-color: var(--button-color-hover);
-    box-shadow: 0 0 10px 2px rgba(255, 255, 255, 0.5);
-    transition: background-color 0.8s ease, box-shadow 0.8s ease;
+.pricing-section p.subtitle {
+    color: #5dae87;
+    font-size: 17px;
 }
 
+ul.pricing-table {
+    width: 90%;
+    margin: 100px auto 60px;
+}
+
+ul.pricing-table li {
+    display: inline-block;
+    float: left;
+    width: 30.66%;
+    background: #fff;
+    padding: 60px 0;
+    margin: 0 2%;
+}
+
+ul.pricing-table li:hover {
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, .1);
+}
+
+.price-container {
+    font-family: 'Arimo', sans-serif;
+    text-transform: uppercase;
+    font-weight: 700;
+    position: relative;
+    width: 200px;
+    margin: 0 auto;
+}
+
+.price-container .currency-symbol {
+    font-size: 21px;
+    position: absolute;
+    top: 15px;
+    left: 40px;
+}
+
+.price-container .price {
+    font-size: 86px;
+}
+
+.price-container .terms {
+    font-size: 21px;
+}
+
+ul.pricing-table li p {
+    width: 80%;
+    margin: 20px auto 40px auto;
+}
+
+ul.pricing-table li a {
+    font-family: 'Arimo', sans-serif;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #5dae87;
+}
+
+ul.pricing-table li a:hover {
+    color: #42966e;
+}
+
+ul.pricing-table li:first-of-type {
+    margin-left: 0;
+}
+
+ul.pricing-table li:last-of-type {
+    margin-right: 0;
+}
+
+ul.pricing-table ul.features {
+    margin: 30px 0 30px 0;
+}
+
+ul.pricing-table .button-1 {
+    color: #fff;
+    border-color: #5dae87;
+}
+
+ul.pricing-table .button-2 {
+    color: #777;
+    border-color: #777;
+}
+
+ul.pricing-table .button-1:hover {
+    color: #fff;
+    background-color: #42966e;
+    border-color: #42966e;
+}
+
+ul.pricing-table .button-2:hover {
+    background-color: #777;
+    color: #fff;
+}
+
+ul.pricing-table ul.features li {
+    display: block;
+    width: 100%;
+    margin: 0px 0;
+    padding: 10px;
+    font-family: 'Arimo', sans-serif;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #bbb;
+}
+
+ul.pricing-table ul.features li:hover {
+    box-shadow: none;
+}
+
+@media only screen and (max-width: 960px) {
+    ul.pricing-table li {
+        display: block;
+        width: 100%;
+        margin: 20px 0 !important;
+    }
+}
 
 
 /*additionally added widghts to the css file*/
@@ -947,8 +943,7 @@ input[type=email]::placeholder {
 /*Footer*/
 
 footer {
-    background: var(--background-colorG);
-    background: var(--background-liner-gradientGB);
+    background: #444;
     margin-top: 0px;
     color: #fff;
     text-align: center;
@@ -960,7 +955,7 @@ footer a.logo {
     float: left;
     color: #fff;
     text-indent: -4999px;
-    background: url(../assets/icon/logo2.png) no-repeat;
+    background: url(../../assets/icon/logo3.png) no-repeat;
     margin: 0 0 0 40px;
     padding: 0 0 40px 0;
     width: 56px;
@@ -1016,27 +1011,25 @@ footer .footer-right a.social {
     text-indent: -4999px;
     overflow: hidden;
     text-align: left;
-    background-color: var(--button-text-color-black);
+    background-color: #363636;
     border-radius: 999px;
     margin-left: 10px;
-    transition: background-color 0.3s ease;
 }
 
-
 footer .footer-right a.social:hover {
-    background-color: var(--button-text-color-green);
+    background-color: #5dae87;
 }
 
 footer a.social.facebook {
-    background-image: url(../assets/icon/social-facebook.png);
+    background-image: url(../assets/social-facebook.png);
 }
 
 footer a.social.twitter {
-    background-image: url(../assets/icon/social-twitter.png);
+    background-image: url(../assets/social-twitter.png);
 }
 
 footer a.social.google {
-    background-image: url(../assets/icon/social-google.png);
+    background-image: url(../assets/social-google.png);
 }
 
 @media only screen and (max-width: 960px) {
